# hermes-station

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .trivyignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.base  GETTING_STARTED.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  railway-template.json  railway.toml  renovate.json5  supervisord.conf
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: base-image.yml  ci.yml  release.yml  staging.yml
docs/: CONTRACT.md  REWRITE_PLAN.md  architecture.md  config.example.yaml  configuration.md  extensions.md  features.md  fixtures.md  ops-runbook.md  railway-template.md  release-runbook.md  secrets.md  troubleshooting.md
extension/: admin.css  admin.js
hermes_station/: __init__.py  __main__.py  app.py  config.py  gateway.py  health.py  logs.py  proxy.py  readiness.py  secrets.py  webui.py
hermes_station/admin/: __init__.py  _templates.py  auth.py  backup.py  bridge_auth.py  channels.py  copilot_oauth.py  htmx_dashboard.py  htmx_logs.py  htmx_settings.py  mcp.py  pairing.py  pilot_smoketest.py  presets.py  provider.py  routes.py  secrets_catalog.py  smoketest.py  topology.py  upgrade.py  usage.py  xai_oauth.py
hermes_station/static/: admin.css
hermes_station/templates/: login.html
hermes_station/templates/admin/: _backup_result.html  _channels_card.html  _copilot_device_flow.html  _explain_card.html  _logs_pane.html  _mcp_card.html  _pairings_panel.html  _preset_applied.html  _provider_card.html  _secrets_card.html  _smoketest_results.html  _status_panel.html  _upgrade_table.html  _usage_data.html  backup.html  base.html  dashboard.html  logs.html  pairings.html  presets.html  settings.html  smoketest.html  topology.html  upgrade.html  usage.html
scripts/: _screenshot.py  dx-verify.sh  generate-release-notes.sh  hermes-entrypoint.sh  install_pinned_binaries.sh  patch_plugin_manifests.py  pinned-binaries.tsv  refresh-screenshots.sh  release.sh  repro_proxy_race.py  sanitize-data-snapshot.sh
tests/: conftest.py  test_admin_backup.py  test_admin_endpoints.py  test_admin_logs.py  test_admin_pilot_backup.py  test_admin_pilot_smoketest.py  test_admin_pilot_upgrade.py  test_admin_pilot_usage.py  test_admin_secrets.py  test_admin_topology.py  test_admin_usage.py  test_app.py  test_bridge_auth.py  test_browser_backend.py  test_channels.py  test_compat.py  test_compat_realistic.py  test_config_normalize.py  test_config_seed_provider.py  test_container_smoke.py  test_container_toolbelt.py  test_copilot_oauth.py  test_coverage_boost.py  test_docs_consistency.py  test_e2e_admin.py  test_e2e_auth_bridge.py  test_e2e_dx.py  test_e2e_webui_contract.py  test_gateway.py  test_gateway_autostart.py  test_health.py  test_himalaya_config.py  test_hindsight_entrypoint.py  test_hindsight_sidecar.py  test_htmx_dashboard.py  test_htmx_secrets.py  test_htmx_settings.py  test_lifespan_normalization.py  test_login_smoke.py  test_logs_json.py  (+17 more)
tests/browser/: conftest.py  test_admin_pane.py  test_polling_lifecycle.py
tests/browser/serial/: test_gateway_restart.py
tests/e2e/: conftest.py  test_webui_login.py
tests/fixtures/: README.md
