[project]
name = "hermes-station"
version = "0.1.4"
description = "Single-container deployment for Hermes Agent + WebUI — drop-in Railway image with an in-process control plane."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
authors = [{name = "Rory Ford", email = "me@roryford.com"}]
keywords = ["railway", "self-hosted", "ai-assistant", "hermes", "docker"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "starlette>=0.40",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    "python-multipart>=0.0.20",
    "itsdangerous>=2.2",
    "httpx>=0.27",
]

[project.urls]
Repository = "https://github.com/roryford/hermes-station"
"Bug Tracker" = "https://github.com/roryford/hermes-station/issues"

[project.optional-dependencies]
# Pinned upstream — tracked by Renovate's pep621 manager.
# hermes-webui is pinned in the Dockerfile (regex manager) because it has no pyproject.toml upstream.
# Kept as an extra so local dev / lint / unit-test cycles don't pull the full agent dep tree.
hermes = [
    "hermes-agent[messaging] @ git+https://github.com/NousResearch/hermes-agent.git@498bfc7bc12a937621b4215312049b1000726df3",  # v2026.5.7
]
# Mirrors [dependency-groups].dev below — kept here so `uv pip install ".[dev]"` in the
# Dockerfile test stage keeps working. [dependency-groups] is what `uv sync` uses on a
# fresh clone (uv auto-includes the "dev" group without any --extra flags).
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-randomly>=3.15",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-PyYAML>=6.0",
]

[dependency-groups]
# uv auto-includes this group on `uv sync` — no --extra or --group flag needed
# on a fresh clone. The [project.optional-dependencies].dev above mirrors this
# for Dockerfile compat (`uv pip install ".[dev]"`).
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-randomly>=3.15",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-PyYAML>=6.0",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# Required so the `hermes` extra can reference hermes-agent by git URL.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["hermes_station"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 110
target-version = "py312"
exclude = ["tests/fixtures"]

[tool.pytest.ini_options]
# tests/test_login_smoke.py needs a running container and auto-skips when
# HERMES_STATION_E2E_URL isn't set, so the default suite stays hermetic.
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=hermes_station --cov-report=term-missing --cov-fail-under=85"
markers = [
    "manual: opt-in tests that should be run by hand (e.g. bit-rot sentinels for hardcoded model identifiers)",
]

[tool.coverage.run]
branch = true
omit = ["hermes_station/admin/_templates.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
